--- a/paginas/artists/Nora.html
+++ b/paginas/artists/Nora.html
@@ -142,7 +142,7 @@
   <!-- ============ FOOTER ============ -->
   <footer>
     <div class="footer-inner">
-      <div>© <span id="year"></span> Webdesign door Judith Caeyers & Thomas De Paepe</div>
+      <div>© Webdesign door Judith Caeyers & Thomas De Paepe</div>
       <a class="mono-link" href="#top" data-lang-nl="Naar boven" data-lang-en="Back to top">Naar boven</a>
     </div>
   </footer>
