--- a/index.html
+++ b/index.html
@@ -511,13 +511,22 @@
          OPEN CALL
     ================================= -->
     <section id="opencall">
-      <div class="container">
-        <div class="meta" data-lang-nl="Open call" data-lang-en="Open call">Open call</div>
-        <h2 data-lang-nl="Doe mee" data-lang-en="Participate">Doe mee</h2>
-        <p data-lang-nl="We zoeken bestaand werk dat werkt in een vitrine. Stuur 3–5 beelden en een korte bio." data-lang-en="We seek existing works that fit a shop-window context. Send 3–5 images and a short bio.">We zoeken bestaand werk dat werkt in een vitrine...</p>
-        <p style="margin-top:10px"><a class="mono-link" href="#" data-lang-nl="Dien in" data-lang-en="Submit">Dien in</a></p>
-      </div>
-    </section>
+  <div class="container">
+    <div class="meta" data-lang-nl="Open call" data-lang-en="Open call">Open call</div>
+    <h2 data-lang-nl="Doe mee" data-lang-en="Participate">Doe mee</h2>
+
+    <p data-lang-nl="Vitrien stelt bestaand werk tentoon. Hiervoor deden we een open call waarna onze jury een selectie maakte van een uiteenlopende mix disciplines en kunstenaars."
+       data-lang-en="Vitrien presents existing works. Through our open call, the jury selected a diverse mix of disciplines and artists.">
+       Vitrien stelt bestaand werk tentoon. Hiervoor deden we een open call waarna onze jury een selectie maakte van een uiteenlopende mix disciplines en kunstenaars.
+    </p>
+
+    <p data-lang-nl="Volgend jaar jouw werk in de vitrien? Hou onze socials in het oog voor nieuwe open calls — volg ons op <a href='https://www.instagram.com/vitrien_leuven/' target='_blank'>Instagram</a>."
+       data-lang-en="Want your work in next year’s Vitrien? Keep an eye on our socials for new open calls — follow us on <a href='https://www.instagram.com/vitrien_leuven/' target='_blank'>Instagram</a>.">
+       Volgend jaar jouw werk in de vitrien? Hou onze socials in het oog voor nieuwe open calls — volg ons op <a href="https://www.instagram.com/vitrien_leuven/" target="_blank">Instagram</a>.
+    </p>
+  </div>
+</section>
+
 
     <!-- ===============================
          LOV2030
