--- a/paginas/artists/Niels.html
+++ b/paginas/artists/Niels.html
@@ -76,8 +76,8 @@
       <div class="container grid two-col">
         <article>
           <div class="meta" data-lang-nl="Biografie" data-lang-en="Biography">Biografie</div>
-          <p data-lang-nl="Niels Poiz (°1991, Torhout) woont en werkt in Brussel. Hij behaalde een MFA aan LUCA School of Arts (Brussel) en een Post-Master Arts & Design aan Sint-Lucas Antwerpen. Sindsdien exposeerde hij internationaal in solo- en groepstentoonstellingen, performancemanifestaties en Art Book Fairs. Zijn werk richt zich op taal, narratie en communicatie, met aandacht voor sociaal-politieke, culturele, identiteits- en genderkwesties. Naast zijn eigen praktijk is Poiz actief als curator, programmator van het Brussels Queer Zine Fest en gastdocent. Momenteel werkt hij vanuit MAX Collective in Brussel."
-             data-lang-en="Niels Poiz (b. 1991, Torhout) lives and works in Brussels. He holds an MFA from LUCA School of Arts (Brussels) and a Post-Master in Arts & Design from Sint-Lucas Antwerp. Since then, he has exhibited internationally in solo and group shows, performance festivals and Art Book Fairs. His work focuses on language, narration and communication, addressing socio-political, cultural, identity and gender issues. Besides his artistic practice, Poiz is active as a curator, programmer of the Brussels Queer Zine Fest and guest lecturer. He currently works from MAX Collective in Brussels.">
+          <p data-lang-nl="Niels Poiz (°1991, Torhout) woont en werkt in Brussel. Hij behaalde een MFA aan LUCA School of Arts (Brussel) en een Post-Master Arts & Design aan Sint-Lucas Antwerpen. Sindsdien exposeerde hij internationaal in solo- en groepstentoonstellingen, performancemanifestaties en Art Book Fairs. Zijn werk richt zich op taal, narratie en communicatie, met aandacht voor sociaal-politieke, culturele, identiteits- en genderkwesties. Naast zijn eigen praktijk is Poiz actief als programmator van het Brussels Queer Zine Fest en gastdocent. Momenteel werkt hij vanuit MAX Collective in Brussel."
+             data-lang-en="Niels Poiz (b. 1991, Torhout) lives and works in Brussels. He holds an MFA from LUCA School of Arts (Brussels) and a Post-Master in Arts & Design from Sint-Lucas Antwerp. Since then, he has exhibited internationally in solo and group shows, performance festivals and Art Book Fairs. His work focuses on language, narration and communication, addressing socio-political, cultural, identity and gender issues. Besides his artistic practice, Poiz is active as a programmer of the Brussels Queer Zine Fest and guest lecturer. He currently works from MAX Collective in Brussels.">
             Niels Poiz (°1991, Torhout) woont en werkt in Brussel...
           </p>
           <div class="meta" style="margin-top:20px" data-lang-nl="Praktisch" data-lang-en="Practical">Praktisch</div>
@@ -104,19 +104,28 @@
         <div class="meta" data-lang-nl="Werk" data-lang-en="Work">Werk</div>
         <div class="grid gallery">
           <figure class="module">
-            <img src="../../assets/img/artists/Niels1.jpg" alt="Werk — Niels Poiz">
+            <img src="../../assets/img/artists/Niels/Niels1.jpeg" alt="Werk — Niels Poiz">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Niels2.jpg" alt="Werk — Niels Poiz">
+            <img src="../../assets/img/artists/Niels/Niels2.jpeg" alt="Werk — Niels Poiz">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Niels3.jpg" alt="Werk — Niels Poiz">
+            <img src="../../assets/img/artists/Niels/Niels3.jpeg" alt="Werk — Niels Poiz">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Niels4.jpg" alt="Werk — Niels Poiz">
+            <img src="../../assets/img/artists/Niels/Niels4.jpeg" alt="Werk — Niels Poiz">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Niels5.jpg" alt="Werk — Niels Poiz">
+            <img src="../../assets/img/artists/Niels/Niels5.jpeg" alt="Werk — Niels Poiz">
+          </figure>
+            <figure class="module">
+            <img src="../../assets/img/artists/Niels/Niels6.jpeg" alt="Werk — Niels Poiz">
+          </figure>
+            <figure class="module">
+            <img src="../../assets/img/artists/Niels/Niels7.jpeg" alt="Werk — Niels Poiz">
+          </figure>
+            <figure class="module">
+            <img src="../../assets/img/artists/Niels/Niels8.jpeg" alt="Werk — Niels Poiz">
           </figure>
         </div>
       </div>
