--- a/paginas/artists/Niels.html
+++ b/paginas/artists/Niels.html
@@ -139,11 +139,15 @@
   </main>
 
   <footer>
-    <div class="footer-inner">
-      <div>© <span id="year"></span> Vitrien — Leuven</div>
-      <a class="mono-link" href="#top" data-lang-nl="Naar boven" data-lang-en="Back to top">Naar boven</a>
+  <div class="footer-inner">
+    <div>© Webdesign door 
+      <a href="https://www.judithcaeyers.be" target="_blank">Judith Caeyers</a> & 
+      <a href="https://www.instagram.com/thomas_de_paepe_/" target="_blank">Thomas De Paepe</a>
     </div>
-  </footer>
+    <a class="mono-link" href="#top" data-lang-nl="Naar boven" data-lang-en="Back to top">Naar boven</a>
+  </div>
+</footer>
+
 
   <script src="../../assets/js/app.js" defer></script>
 </body>
